--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
       <thead>
         <tr>
           <tr>
-            <td colspan="5" class="center-align">Actividades</td>
+            <td colspan="5" class="center-align">Verifique sus Actividades</td>
           </tr>
             <tr>
-              <th class="center-align">Lista de Responsabilidades</th>
+              <th class="center-align"> Lista de Programación</th>
               <th class="center-align">Martes</th>
               <th class="center-align">Viernes</th>
               <th class="center-align">Sábado</th>
