--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
       background-color: #f2f2f2;
     }
 
+  .modal-content {
+  background-color: transparent;
+  box-shadow: none;
+  padding: 0;
+}
+
+.modal-overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+}
     .modal {
       width: 75% !important;
       max-height: 90% !important;
@@ -276,7 +285,7 @@
   <p style="font-size: 12px; opacity: 0.5; text-align: center;">&copy; Equipo 💚 Cristo Vive Multimedia Confidencial, V12 Estable</p>
   
   <div style="display: flex; justify-content: center;">
-    <button id="print-button" class="custom-button hide-on-load">Imprimir Organización Semanal</button>
+    <button id="print-button" class="custom-button hide-on-load">Guardar Organización</button>
   </div>
 
 
@@ -288,11 +297,11 @@
       <h4>Ingresar los datos adecuados 😎</h4>
       <div class="input-field">
         <input id="modal-input" type="text" class="validate">
-        <label for="modal-input">Servidor de datos activo ✅: estamos trabajando para usted ⚙️</label>
+        <label for="modal-input">Servidor de datos activo ✅⚙️</label>
       </div>
     </div>
     <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Guardar</a>
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Ingresar datos</a>
     </div>
   </div>
 
