--- a/index.html
+++ b/index.html
@@ -68,18 +68,18 @@
 }
 
 .editable-cell.error {
-  background-color: #f5ff64;
+  background-color: #f02f5f;
   position: relative;
 }
 
 .editable-cell.error::after {
-  content: "Falta información";
+  content: "Falta Información";
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 12px;
-  color: red;
+  color: rgb(0, 0, 0);
 }
     /* Improved button styling */
     .custom-button {
