--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 }
 
 .editable-cell.error {
-  background-color: #f02f5f;
+  background-color: #d4879a;
   position: relative;
 }
 
@@ -79,7 +79,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 12px;
-  color: rgb(0, 0, 0);
+  color: rgb(163, 163, 163);
 }
     /* Improved button styling */
     .custom-button {
