--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
       width: 75% !important;
       max-height: 75% !important;
     }
+    .hide {
+  display: none;
+}
     .footer {
       text-align: center;
       margin-top: 20px;
@@ -132,6 +135,7 @@
       border-top: 16px solid #3498db;
       animation: spin 2s linear infinite;
     }
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
