--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
       </div>
     </div>
     <div class="modal-footer">
-      <a href="#!" class="btn waves-effect waves-teal">Ingresar datos</a>
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Ingresar datos</a>
     </div>
   </div>
 
