--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
   <div class="watermark">Iglesia Cristo Vive</div>
 
   <!-- Modal Structure -->
-  <div id="data-modal" class="w3-container">
-    <div class="modal-content">
+  <div id="data-modal" class=modal bottom-sheet">
+    <div class="modal bottom-sheet">
       <h4>Ingresar los datos adecuados 😎</h4>
       <div class="input-field">
         <input id="modal-input" type="text" class="validate">
