--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
   <div class="watermark">Iglesia Cristo Vive</div>
 
   <!-- Modal Structure -->
-  <div id="data-modal" class=modal bottom-sheet">
-    <div class="modal bottom-sheet">
+  <div id="data-modal" class=modal-content">
+    <div class="modal-content">
       <h4>Ingresar los datos adecuados 😎</h4>
       <div class="input-field">
         <input id="modal-input" type="text" class="validate">
@@ -318,7 +318,7 @@
       </div>
     </div>
     <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Ingresar datos</a>
+      <a href="#!" class="modal-close waves-effect waves-green btn-floating">Ingresar datos</a>
     </div>
   </div>
 
