--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
   <div class="watermark">Iglesia Cristo Vive</div>
 
   <!-- Modal Structure -->
-  <div id="data-modal" class=modal-content">
+  <div id="data-modal" class=modal-content>
     <div class="modal-content">
       <h4>Ingresar los datos adecuados 😎</h4>
       <div class="input-field">
