--- a/index.html
+++ b/index.html
@@ -310,6 +310,8 @@
 
   <!-- Modal Structure -->
   <div id="data-modal" class="modal-content">
+    <div id="modal" class="modal-content">
+      <div class="modal-content">
     <h4>Ingresar los datos adecuados 😎</h4>
     <div class="input-field">
       <input id="modal-input" type="text" class="validate">
