--- a/index.html
+++ b/index.html
@@ -309,16 +309,13 @@
   <div class="watermark">Iglesia Cristo Vive</div>
 
   <!-- Modal Structure -->
-  <div id="data-modal" class="modal-content">
-    <div id="modal" class="modal-content">
-      <div class="modal-content">
-    <h4>Ingresar los datos adecuados 😎</h4>
-    <div class="input-field">
-      <input id="modal-input" type="text" class="validate">
-      <label for="modal-input">Servidor de datos activo ✅⚙️</label>
-    </div>
-  </div>
-  
+  <div id="data-modal" class="modal">
+    <div class="modal-content">
+      <h4>Ingresar los datos adecuados 😎</h4>
+      <div class="input-field">
+        <input id="modal-input" type="text" class="validate">
+        <label for="modal-input">Servidor de datos activo ✅⚙️</label>
+      </div>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Ingresar datos</a>
