Agregar fechas y horario

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 }
 
 .editable-cell.error::after {
-  content: "Falta Información";
+  content: "Vacia";
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 12px;
-  color: rgb(163, 163, 163);
+  color: rgb(240, 130, 40);
 }
 .datepicker-modal {
       width: 350px !important;
@@ -285,10 +285,10 @@
         <tr>
           <td class="center-align">Fecha del Servicio</td>
           <td id="fecha-servicio" class="editable-cell" contenteditable="true"></td>
-          <td class="editable-cell" contenteditable="true"></td>
-          <td class="editable-cell" contenteditable="true"></td>
-          <td class="editable-cell" contenteditable="true"></td>
-          <td class="editable-cell" contenteditable="true"></td>
+          <td id="fecha-servicio" class="editable-cell" contenteditable="true"></td>
+          <td id="fecha-servicio" class="editable-cell" contenteditable="true"></td>
+          <td id="fecha-servicio" class="editable-cell" contenteditable="true"></td>
+          <td id="fecha-servicio" class="editable-cell" contenteditable="true"></td>
         </tr>
         <tr>
           <td class="center-align">Dirige</td>
@@ -328,20 +328,20 @@
         <tr>
           <td class="center-align">Horario</td>
           <td id="horario" class="editable-cell" contenteditable="true"></td>
-          <td class="editable-cell" contenteditable="true"></td>
-          <td class="editable-cell" contenteditable="true"></td>
-          <td class="editable-cell" contenteditable="true"></td>
-          <td class="editable-cell" contenteditable="true"></td>
+          <td id="horario" class="editable-cell" contenteditable="true"></td>
+          <td id="horario" class="editable-cell" contenteditable="true"></td>
+          <td id="horario" class="editable-cell" contenteditable="true"></td>
+          <td id="horario" class="editable-cell" contenteditable="true"></td>
         </tr>
       </tbody>
     </table>
   </div>
 
   <div class="footer">
-    <p style="font-size: 12px; opacity: 0.5; text-align: center;">Fecha del archivo generado: <span id="today"></span></p>
+    <p style="font-size: 12px; opacity: 0.5; text-align: center;">Archivo generado: <span id="today"></span></p>
 </div>
   <p style="font-size: 12px; opacity: 0.5; text-align: center;">Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado.</p>
-  <p style="font-size: 12px; opacity: 0.5; text-align: center;">&copy; Equipo 💚 Cristo Vive Multimedia Confidencial, V13 </p>
+  <p style="font-size: 12px; opacity: 0.5; text-align: center;">&copy; Equipo 💚 Cristo Vive Multimedia Confidencial, V14 </p>
   
   <div style="display: flex; justify-content: center;">
     <button id="print-button" class="custom-button hide-on-load">Guardar Organización</button>
