--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
     }
 
     .modal-content {
-    background-color: transparent;
-    box-shadow: none;
-    padding: 0;
-    }
+  background-color: transparent;
+  box-shadow: none;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 
 
      .modal-overlay {
@@ -56,6 +60,18 @@
       width: 75% !important;
       max-height: 75% !important;
     }
+    .modal-input {
+  border: 1px solid #ddd;
+  padding: 5px;
+  width: 100%;
+  box-sizing: border-box;
+}
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+}
+
+
     .hide {
   display: none;
 }
@@ -72,6 +88,12 @@
   background-color: #d4879a;
   position: relative;
 }
+.edit-button {
+  border: none;
+  background: none;
+  font-size: 16px;
+  cursor: pointer;
+}
 
 .editable-cell.error::after {
   content: "Vacia";
@@ -81,7 +103,9 @@
   transform: translate(-50%, -50%);
   font-size: 12px;
   color: rgb(240, 130, 40);
+  pointer-events: none;
 }
+
 .datepicker-modal {
       width: 350px !important;
       max-height: 350px !important;
